clusters/talos-cluster/hermes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes-service
  namespace: hermes
spec:
  selector:
    app: hermes
  ports:
    - name: http
      port: 80
      targetPort: 8081
