clusters/talos-cluster/hermes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hermes-route
  namespace: hermes
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "hermes.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hermes-service
          port: 80
